--- a/pokemon-battles-react/src/pages/players/players.css
+++ b/pokemon-battles-react/src/pages/players/players.css
@@ -24,6 +24,8 @@ button {
   display: flex;
   flex-direction: column;
   box-shadow: none;
+  height: calc(100% - (110px));
+  overflow-y: auto !important;
 }
 
 .add-player-container {
